fix overflow in card product

--- a/assets/styles/component/_admin.scss
+++ b/assets/styles/component/_admin.scss
@@ -42,6 +42,11 @@
                 z-index: 1;
             }
 
+            h5 {
+                max-width: 120px;
+                overflow: hidden;
+            }
+
             &__image {
                 position: relative;
                 width: 100%;
