--- a/assets/styles/component/_header.scss
+++ b/assets/styles/component/_header.scss
@@ -97,7 +97,7 @@
                 &-outline {
                     &-primary {
                         grid-column: 3 / 4;
-                        width: 133px;
+                        max-width: 133px;
                         height: 40px;
                     }
                 }
@@ -120,6 +120,15 @@
 @media screen and (max-width: 359px) {
     .header {
         &__container {
+            .btn {
+                &-outline {
+                    &-primary {
+                        grid-column: 2 / 3;
+                        width: 100%;
+                    }
+                }
+            }
+
             &__search-icon {
                 color: #464646;
                 display: block;
